fix typo on post

--- a/src/content/blog/00-hello-world/index.mdx
+++ b/src/content/blog/00-hello-world/index.mdx
@@ -8,4 +8,4 @@ import Callout from "@/components/Callout.astro";
 
 ---
 
-This site is built using AstroNano template. Will probably need to use a headless CMS solution to manage content, probably Contentful. Will see how it goes.
+This site is built using the AstroNano template. I might need a headless CMS like Contentful to manage content. We'll see how it goes.
